@@ -595,15 +595,6 @@ B<dh_systemd_start> instead.
 
 =item -
 
-The B<-s> (B<--same-arch>) option is removed.  Please use B<-a> (B<--arch>) instead.
-
-=item -
-
-Invoking B<dh_clean -k> now causes an error instead of a deprecation
-warning.
-
-=item -
-
 B<dh_installdirs> no longer creates debian/I<package> directories
 unless explicitly requested (or it has to create a subdirectory in
 it).
@@ -621,11 +612,6 @@ The B<makefile> buildsystem now passes B<INSTALL=install
 The B<--list-missing> and B<--fail-missing> in B<dh_install> has been
 removed.  Please use B<dh_missing> and its corresponding options,
 which can also see the files installed by other helpers.
-
-=item -
-
-The B<--no-restart-on-upgrade> option in B<dh_installinit> has been removed.
-Please use the new name B<--no-stop-on-upgrade>
 
 =item -
 
@@ -693,18 +679,6 @@ retroactively from existing compat levels as well.
 
 =item -
 
-There was a bug in the B<doit> (and similar) functions from
-L<Debian::Debhelper::Dh_Lib> that made them spawn a shell in one
-particular circumstance.  This bug is now removed and will cause
-helpers that rely on the bug to fail with an error.
-
-In compatibility 11, there is still a detection for this case to
-provide a useful error message.  This detection will be removed in
-compatibility 12, where the string will be interpreted as a literal
-command and fail with a "command not found" error.
-
-=item -
-
 The B<dh_makeshlibs> helper will now exit with an error if objdump
 returns a non-zero exit from analysing a given file.
 
@@ -729,6 +703,43 @@ file and look for an ELF header to determine if a given file is an
 shared object or an ELF executable.
 
 This change may cause the tools to process more files than previously.
+
+=back
+
+=item v12
+
+This compatibility level is still open for development; use with caution.
+
+Changes from v11 are:
+
+=over 8
+
+
+=item -
+
+The B<-s> (B<--same-arch>) option is removed.  Please use B<-a> (B<--arch>) instead.
+
+=item -
+
+Invoking B<dh_clean -k> now causes an error instead of a deprecation
+warning.
+
+=item -
+
+The B<--no-restart-on-upgrade> option in B<dh_installinit> has been removed.
+Please use the new name B<--no-stop-on-upgrade>
+
+=item -
+
+There was a bug in the B<doit> (and similar) functions from
+L<Debian::Debhelper::Dh_Lib> that made them spawn a shell in one
+particular circumstance.  This bug is now removed and will cause
+helpers that rely on the bug to fail with an error.
+
+In compatibility 11, there is still a detection for this case to
+provide a useful error message.  This detection will be removed in
+compatibility 12, where the string will be interpreted as a literal
+command and fail with a "command not found" error.
 
 =back
 
