@@ -52,7 +52,7 @@ slash.  Any content in these directories will be removed as well.
 
 This is deprecated, use L<dh_prep(1)> instead.
 
-The option is removed in compat 11.
+The option is removed in compat 12.
 
 =item B<-d>, B<--dirs-only>
 
@@ -83,8 +83,8 @@ inhibit_log();
 
 if ($dh{K_FLAG}) {
 	deprecated_functionality('dh_clean -k is deprecated; use dh_prep instead',
-							 11,
-							 'The -k option is not supported in compat 11; use dh_prep instead');
+							 12,
+							 'The -k option is not supported in compat 12; use dh_prep instead');
 }
 
 # Remove the debhelper stamp file
