@@ -171,8 +171,8 @@ doit([$options, ]@command)
 
 	This will *not* invoke a shell, so meta characters will not have any special
 	meaning.  Use complex_doit for that.
-	NB: In compat 10 and below, there was a bug that would make doit fork a shell
-	in one special case.  This is deprecated and will be removed in compat 11.
+	NB: In compat 11 and below, there was a bug that would make doit fork a shell
+	in one special case.  This is deprecated and will be removed in compat 12.
 	The detection code for this can be disabled by passing an empty hashref for
 	as $options.  This will make doit unconditionally avoid forking a shell.
 print_and_doit([$options, ]@command)
