@@ -35,7 +35,7 @@ sub AddPackage { my($option,$value)=@_;
 		$dh{DOARCH}=1;
 		if ($option eq 's' or $option eq 'same-arch') {
 			deprecated_functionality('-s/--same-arch is deprecated; please use -a/--arch instead',
-									 11,
+									 12,
 									 '-s/--same-arch has been removed; please use -a/--arch instead'
 			);
 		}
