@@ -15,6 +15,13 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     --doc-main-package are listed in debian/control.
   * dh_installexamples: Ditto.
   * dh_systemd_start: Regex escape two paths used in a regex.
+  * Dh_Lib: Open compat 12.
+  * dh_clean: Defer making -k an error until compat 12.
+  * Dh_Getopt: Defer making -s an error until compat 12.
+  * dh_installinit: Defer making --no-restart-on-upgrade an error
+    until compat 12.
+  * Dh_Lib: Defer making the "shell-spawning bug" in doit an error
+    until compat 12.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Add basic cross-building support.  (Closes: #877357)
